0.65 (01.24.2006) - John Siracusa <siracusa@mindspring.com>

    * Added missing "use ..." statements to the code generated by
      perl_class_definition().
    * Fixed a bug that prevented certain kinds of self-referential
      relationships from being initialized properly.  (Reported by
      Bruno Czekay)
    
0.64 (01.19.2006) - John Siracusa <siracusa@mindspring.com>

    * Worked around yet more SQLite ORDER BY bugs.
    * Improved the column trigger implementation.
    * Added support for MySQL 5's brain-dead new BIT column type.  Classes
      must allow_inline_column_values(1) to use it due to the inability of
      DBD::mysql to bind BIT values correctly without explicit calls to
      DBI's bind_param() method.
    * Use alternate strategies for extracting foreign key information from
      MySQL 5 because the old way no longer works reliably.

0.63 (01.15.2006) - John Siracusa <siracusa@mindspring.com>

    * Made the with_map_records Manager argument work in the
      manager_args list for relationships.
    * Added the generate_manager_class_name() method to the loader.
    * Added the auto_manager_class_name() method to convention manager, 
      and made the loader delegate to it.

0.62 (01.06.2006) - John Siracusa <siracusa@mindspring.com>

    * Fixed a make_modules() bug that caused incorrect init_db() methods
      to be created in some cases.  (Reported by Sean Davis)

0.61 (01.05.2006) - John Siracusa <siracusa@mindspring.com>

    * Added "select" parameter to the Manager which accetps an explicit
      list of columns to be selected.
    * It's now possible to filter based on columns that are not selected
      as part of a Manager query.
    * Extra parameters can now be passed to the method created by
      make_manager_method_from_sql()
    * Fixed several bitfield column accessor method bugs.  (Reported by 
      Svilen Ivanov)
    * The loader's make_modules() method now correctly creates *.pm files