@@ -1,5 +1,6 @@
 0.65 (01.24.2006) - John Siracusa <siracusa@mindspring.com>
 
+    * More MySQL 5 bitfield fixes, plus documentation of same.
     * Added missing "use ..." statements to the code generated by
       perl_class_definition().
     * Fixed a bug that prevented certain kinds of self-referential
